// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`adds \`dataTest\` prop 1`] = `
<Textarea
  dataTest="Duck"
  onChange={[Function]}
  value="goose"
>
  <textarea
    className="root rootStateDefault"
    data-test="Duck"
    disabled={false}
    onChange={[Function]}
    required={false}
    value="goose"
  />
</Textarea>
`;

exports[`adds \`disabled\` attribute 1`] = `
<Textarea
  isDisabled={true}
  onChange={[Function]}
  value="goose"
>
  <textarea
    className="root rootStateDisabled"
    disabled={true}
    onChange={[Function]}
    required={false}
    value="goose"
  />
</Textarea>
`;

exports[`adds \`id\` attribute 1`] = `
<Textarea
  id="Goose"
  onChange={[Function]}
  value="goose"
>
  <textarea
    className="root rootStateDefault"
    disabled={false}
    id="Goose"
    onChange={[Function]}
    required={false}
    value="goose"
  />
</Textarea>
`;

exports[`adds \`maxLength\` attribute 1`] = `
<Textarea
  maxLength={100}
  onChange={[Function]}
  value="goose"
>
  <textarea
    className="root rootStateDefault"
    disabled={false}
    maxLength={100}
    onChange={[Function]}
    required={false}
    value="goose"
  />
</Textarea>
`;

exports[`adds \`name\` HTML attribute 1`] = `
<Textarea
  name="duck"
  onChange={[Function]}
  value="goose"
>
  <textarea
    className="root rootStateDefault"
    disabled={false}
    name="duck"
    onChange={[Function]}
    required={false}
    value="goose"
  />
</Textarea>
`;

exports[`adds \`required\` attribute 1`] = `
<Textarea
  isRequired={true}
  onChange={[Function]}
  value="goose"
>
  <textarea
    className="root rootStateDefault"
    disabled={false}
    onChange={[Function]}
    required={true}
    value="goose"
  />
</Textarea>
`;

exports[`adds placeholder 1`] = `
<Textarea
  onChange={[Function]}
  placeholder="Goose"
  value="goose"
>
  <textarea
    className="root rootStateDefault"
    disabled={false}
    onChange={[Function]}
    placeholder="Goose"
    required={false}
    value="goose"
  />
</Textarea>
`;

exports[`renders \`value\` as the \`value\` attribute 1`] = `
<textarea
  class="root rootStateDefault"
>
  Goose
</textarea>
`;

exports[`renders an error state 1`] = `
<Textarea
  hasError={true}
  onChange={[Function]}
  value="goose"
>
  <textarea
    className="root rootStateError"
    disabled={false}
    onChange={[Function]}
    required={false}
    value="goose"
  />
</Textarea>
`;
